editor/spellchecker/TextServicesDocument.cpp
@@ -2691,11 +2691,10 @@ TextServicesDocument::OffsetEntryArray::FindWordRange(
 
   const char16_t* str = aAllTextInBlock.BeginReading();
   uint32_t strLen = aAllTextInBlock.Length();
+  MOZ_ASSERT(strOffset <= strLen,
+             "The string offset shouldn't be greater than the string length!");
 
   intl::WordRange res = intl::WordBreaker::FindWord(str, strLen, strOffset);
-  if (res.mBegin == res.mEnd) {
-    return Err(str ? NS_ERROR_ILLEGAL_VALUE : NS_ERROR_NULL_POINTER);
-  }
 
   // Strip out the NBSPs at the ends
   while (res.mBegin <= res.mEnd && IS_NBSP_CHAR(str[res.mBegin])) {
